--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Shreelekh Ingle | Developer Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Font Awesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
+
+<!-- Navbar -->
+<nav class="navbar">
+  <ul style="list-style: none; display: flex; gap: 20px; padding: 10px;">
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
 <header>
   <h1>Shreelekh Ingle</h1>
@@ -17,7 +27,7 @@
   </div>
 </header>
 
-<section class="about-section">
+<section id="about" class="about-section">
   <h2>About Me</h2>
   <p>Hello! I'm <strong>Shreelekh Ingle</strong>, a passionate 14-year-old tech enthusiast and self-taught developer based in Nagpur, Maharashtra, India.</p>
   <p>Ever since I typed my first line of code, I’ve been hooked on the creative power of programming. From building calculators and weather apps to experimenting with AI and robotics, I love solving real-world problems with code.</p>
@@ -32,6 +42,37 @@
     <li>Backend: Node.js (learning), Firebase, APIs</li>
     <li>Tools: GitHub, VS Code, Figma</li>
     <li>Exploring: Python, React, AI tools, Game engines</li>
+  </ul>
+</section>
+
+<!-- Projects Section -->
+<section id="projects" class="projects-section">
+  <h2>Projects</h2>
+  <ul>
+    <li><strong>Weather App</strong> — A real-time weather checker using OpenWeather API.</li>
+    <li><strong>Calculator</strong> — A functional calculator built with HTML, CSS, and JavaScript.</li>
+    <li><strong>Todo List</strong> — A task manager app with local storage.</li>
+    <li><strong>Portfolio Site</strong> — This very site! Built from scratch using HTML/CSS.</li>
+  </ul>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="contact-section">
+  <h2>Contact</h2>
+  <ul style="list-style: none; padding: 0;">
+    <li>
+      <i class="fas fa-envelope"></i> 
+      Email: <a href="mailto:shreelekh@example.com">shreelekh@example.com</a>
+    </li>
+    <li>
+      <i class="fab fa-github"></i> 
+      GitHub: <a href="https://github.com/shreelekh" target="_blank">shreelekh</a>
+    </li>
+    <li>
+      <i class="fab fa-instagram"></i> 
+      Instagram: 
+      <a href="https://www.instagram.com/shreelekh.py?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@shreelekh.py</a>
+    </li>
   </ul>
 </section>
 
