--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
   <title>Shreelekh Ingle | Developer Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* General Styles */
-    body, html {
+  body, html {
       height: 100%;
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto Mono', monospace; /* Change to monospaced font */
       background-image: url('your-background-image.jpg'); /* Add your background image here */
       background-size: cover; /* Cover the entire viewport */
       background-position: center; /* Center the image */
-      color: #e0e0e0;
+      color: #90ee90; /* Change font color to light green */
       overflow-x: hidden;
     }
 /* Section Backgrounds */
