--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Shreelekh Ingle | Developer Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <!-- Font Awesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    /* General Styles */
-    body, html {
-      height: 100%;
-      margin: 0;
-      font-family: 'Roboto Mono', monospace; /* Change to monospaced font */
-      background-image: url('your-background-image.jpg'); /* Add your background image here */
-      background-size: cover; /* Cover the entire viewport */
-      background-position: center; /* Center the image */
-      color: #90ee90; /* Change font color to light green */
-      overflow-x: hidden;
+      box-shadow: 0 10px 30px rgba(0, 150, 90, 0.2);
     }
-/* Section Backgrounds */
-    section {
-      background-color: rgba(255, 255, 255, 0.1); /* Light transparent background for sections */
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      .game-tab {
+        font-size: 0.9rem;
+        padding: 10px 20px;
+      }
+    }
+    /* Make all images responsive */
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    /* Footer Styles */
+    footer {
+      text-align: center;
       padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
+      background: rgba(0, 0, 0, 0.7);
+      color: #90ee90;
+      position: relative;
+      bottom: 0;
+      width: 100%;
     }
-
-    /* Achievements Section Styles */
+  /* Achievements Section Styles */
     .certificate-gallery {
       display: flex;
       flex-wrap: wrap;
