--- a/index.html
+++ b/index.html
@@ -1,4 +1,83 @@
-      box-shadow: 0 10px 30px rgba(0, 150, 90, 0.2);
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shreelekh Ingle | Developer Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    /* General Styles */
+    body, html {
+      height: 100%;
+      margin: 0;
+      font-family: 'Roboto Mono', monospace;
+      background-image: url('your-background-image.jpg');
+      background-size: cover;
+      background-position: center;
+      color: #90ee90;
+      overflow-x: hidden;
+    }
+    /* Navigation Styles */
+    nav {
+      background: rgba(0, 0, 0, 0.7);
+      padding: 10px;
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
+      color: #90ee90;
+      margin: 0 15px;
+      text-decoration: none;
+          }
+    nav a.active {
+      font-weight: bold;
+    }
+    /* Section Styles */
+    section {
+      background-color: #000; /* Black background */
+      color: #ffffff; /* White text for contrast */
+      padding: 20px;
+      border-radius: 8px;
+      margin: 80px 20px; /* Added margin for fixed nav */
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+    /* Heading Colors */
+    #about h2, #about h3 {
+      color: #ffcc00; /* Yellow for About Me section */
+    }
+    #skills h2 {
+      color: #00ccff; /* Light Blue for Skills section */
+    }
+    #testimonials h2 {
+      color: #ff6699; /* Pink for Testimonials section */
+    }
+    #projects h2 {
+      color: #66ff66; /* Light Green for Projects section */
+    }
+    #games h2 {
+      color: #ff9933; /* Orange for Games section */
+    }
+    #blog h2, #hobbies h2, #achievements h2, #contact h2 {
+      color: #cc66ff; /* Purple for Blog, Hobbies, Achievements, and Contact sections */
+    }
+    /* Header Styles */
+    header {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    /* Game Section Styles */
+    #games {
+      padding: 48px 24px;
+      background: #111827; /* Dark background for games */
+      color: #e0e0e0;
+      border-radius: 16px;
+      margin: 48px auto;
+      max-width: 900px;
+box-shadow: 0 10px 30px rgba(0, 150, 90, 0.2);
     }
     /* Responsive Styles */
     @media (max-width: 768px) {
