--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       color: #90ee90;
       margin: 0 15px;
       text-decoration: none;
-          }
+    }
     nav a.active {
       font-weight: bold;
     }
@@ -105,7 +105,7 @@
       bottom: 0;
       width: 100%;
     }
-  /* Achievements Section Styles */
+    /* Achievements Section Styles */
     .certificate-gallery {
       display: flex;
       flex-wrap: wrap;
@@ -118,25 +118,7 @@
       border-radius: 8px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
- /* Games Section Styles */
-    #games {
-      padding: 48px 24px;
-      background: #111827; /* dark background for games */
-      color: #e0e0e0;
-      border-radius: 16px;
-      margin: 48px auto;
-      max-width: 900px;
-      box-shadow: 0 10px 30px rgba(0, 150, 90, 0.2);
-    }
-
-    #games h2 {
-      font-size: 2.5rem;
-      margin-bottom: 24px;
-      text-align: center;
-      font-weight: 700;
-      letter-spacing: 0.05em;
-    }
-
+    /* Games Section Styles */
     .game-tabs {
       display: flex;
       justify-content: center;
@@ -144,7 +126,6 @@
       margin-bottom: 32px;
       flex-wrap: wrap;
     }
-
     .game-tab {
       background: #374151;
       border: none;
@@ -165,7 +146,6 @@
       color: white;
       box-shadow: 0 0 12px #059669;
     }
-
     .game-content {
       display: none;
       max-width: 100%;
@@ -178,7 +158,7 @@
     .game-content.active {
       display: block;
     }
- /* Snake Game Styles */
+    /* Snake Game Styles */
     #snake-game canvas {
       display: block;
       margin: 0 auto 16px;
@@ -202,7 +182,6 @@
     #snake-game button:hover {
       background: #047857;
     }
-
     /* Rock Paper Scissors Styles */
     #rps-game button {
       background: #059669;
@@ -228,7 +207,6 @@
       min-height: 1.5em;
       text-align: center;
     }
-
     /* Memory Game Styles */
     #memory-game #memoryBoard {
       display: grid;
@@ -274,77 +252,35 @@
     #memory-game button:hover {
       background: #047857;
     }
-
-  
-    /* Make all images responsive */
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-
-    /* Sidebar nav responsive wrapping */
-    @media (max-width: 768px) {
-      .sidebar nav {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 8px;
-      }
-    }
-
-    /* Extra small screens support */
-    @media (max-width: 480px) {
-      .sidebar nav a {
-        font-size: 0.9rem;
-        padding: 8px 0;
-      }
-
-      main {
-        padding: 12px;
-      }
-
-      h1, h2 {
-        font-size: 1.5rem;
-      }
-
-      .game-tab {
-        font-size: 0.9rem;
-        padding: 10px 20px;
-      }
-    }
-
-</style>
+  </style>
 </head>
 <body>
-    <nav aria-label="Primary navigation">
-      <a href="#about" class="active">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#testimonials">Testimonials</a>
-      <a href="#projects">Projects</a>
-      <a href="#blog">Blog</a>
-      <a href="#hobbies">Hobbies</a>
-      <a href="#achievements">Achievements</a>
-      <a href="#apps">Apps</a>
-      <a href="#games">Let's Play Game</a>
-      <a href="#contact">Contact</a>
-    </nav>
+  <nav aria-label="Primary navigation">
+    <a href="#about" class="active">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#testimonials">Testimonials</a>
+    <a href="#projects">Projects</a>
+    <a href="#blog">Blog</a>
+    <a href="#hobbies">Hobbies</a>
+    <a href="#achievements">Achievements</a>
+    <a href="#apps">Apps</a>
+    <a href="#games">Let's Play Game</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-    <div class="social-links" aria-label="Social media links">
-      <a href="https://github.com/shreelekh" target="_blank" aria-label="GitHub profile">
-        <i class="fab fa-github"></i>
-      </a>
-      <a href="mailto:shreelekh@org.in" aria-label="Email">
-        <i class="fas fa-envelope"></i>
-      </a>
-      <a href="https://www.instagram.com/shreelekh.py" target="_blank" aria-label="Instagram profile">
-        <i class="fab fa-instagram"></i>
-      </a>
-    </div>
-  </aside>
+  <div class="social-links" aria-label="Social media links">
+    <a href="https://github.com/shreelekh" target="_blank" aria-label="GitHub profile">
+      <i class="fab fa-github"></i>
+    </a>
+    <a href="mailto:shreelekh@org.in" aria-label="Email">
+      <i class="fas fa-envelope"></i>
+    </a>
+    <a href="https://www.instagram.com/shreelekh.py" target="_blank" aria-label="Instagram profile">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
 
-  <!-- Main content -->
   <main role="main">
-
     <header>
       <h1>Shreelekh Ingle</h1>
       <p>14-year-old Developer • Future Engineer • Tech Explorer</p>
@@ -404,8 +340,11 @@
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
       <ul class="project-list">
-      </section>
-<section id="games" class="games-section" aria-label="Interactive Games Section">
+        <!-- Add your project items here -->
+      </ul>
+    </section>
+
+    <section id="games" class="games-section" aria-label="Interactive Games Section">
       <h2>Let's Play Game</h2>
       <div class="game-tabs" role="tablist" aria-label="Game Tabs">
         <button class="game-tab active" role="tab" aria-selected="true" aria-controls="snake-game" id="tab-snake">Snake Game</button>
@@ -414,11 +353,13 @@
       </div>
 
       <section id="snake-game" class="game-content active" role="tabpanel" aria-labelledby="tab-snake" tabindex="0">
+        <h3>Snake Game</h3>
         <canvas id="snakeCanvas" width="400" height="400" aria-label="Snake game canvas"></canvas>
         <button id="snakeReset" type="button" aria-label="Reset Snake Game">Reset Game</button>
       </section>
 
       <section id="rps-game" class="game-content" role="tabpanel" aria-labelledby="tab-rps" tabindex="0">
+        <h3>Rock Paper Scissors</h3>
         <div style="text-align:center;">
           <button type="button" data-choice="rock">Rock</button>
           <button type="button" data-choice="paper">Paper</button>
@@ -428,6 +369,7 @@
       </section>
 
       <section id="memory-game" class="game-content" role="tabpanel" aria-labelledby="tab-memory" tabindex="0">
+        <h3>Memory Game</h3>
         <div id="memoryBoard" aria-label="Memory game cards grid"></div>
         <button id="memoryReset" type="button" aria-label="Reset Memory Game">Reset Game</button>
       </section>
@@ -479,7 +421,6 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="contact-section">
       <h2>Contact</h2>
       <ul style="list-style: none; padding: 0;">
@@ -494,19 +435,7 @@
         <li>
           <i class="fab fa-instagram"></i> 
           Instagram: 
-          <a href="https://www.instagram.com/shreelekh.py?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">@shreelekh.py</a>
-        </li>
-      </ul>
-    </section>
-
-    <footer>
-      <p>&copy; 2025 Shreelekh Ingle. All rights reserved.</p>
-    </footer>
-
-  </main>
-</div>
-
-<script>
+          <script>
   // Tab switcher for Games Section
   const tabs = document.querySelectorAll('.game-tab');
   const panels = document.querySelectorAll('.game-content');
