--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       <ul style="list-style: none; padding: 0;">
         <li>
           <i class="fas fa-envelope"></i> 
-          Email: <a href="mailto:shreelekh@example.com">shreelekh@example.com</a>
+          Email: <a href="mailto:shreelekh69@gmail.com">shreelekh69@hacker.com</a>
         </li>
         <li>
           <i class="fab fa-github"></i> 
@@ -440,7 +440,7 @@
         </li>
         <li>
           <i class="fab fa-instagram"></i> 
-          Instagram: 
+          Instagram: <a href="https://www.instagram.com/its__shreelekh/?__d=11" target="_blank">shreelekh</a>
           <script>
   // Tab switcher for Games Section
   const tabs = document.querySelectorAll('.game-tab');
